--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.5-Alpha3 
	- Added lyricswiki link Ticket #70
	- Updated README language
	- Updated getid3 library 2.0.0b4 to 2.0.0b5
	- Make the Democratic playlist be assoicated with the user
		who sends it to a 'player' 
	- Fixed missing page headers on democratic playlist
	- Show who voted for the sogns on democratic playlist
	- Increase default stream length to account for the fact that movies
		are a good bit longer then songs
	- Correct Issues with multi-byte characters in Lyrics (Thx Momo-i)
	- Added caching to Video
	- Added Video calls to the API
	- Remove redundent code from Browse class by making it extend
		nwe Query class
	- Update Prototype to 1.6.0.3
	- Add Time range to advanced search
	- Add sorting to Video Browse
	- Changed to new Query backend for Browsing and Dynamic Playlists

--------------------------------------------------------------------------
  v.3.5-Alpha2 03/08/2009
	- Fixed caching of objects with no return value
	- Fixed updating of songs that should not be updated during catalog
		verify
	- Added default_user_level config option that allows you to define
		the user level when use_auth is false. Also allows manual
		login of admin users when use_auth is false. 
	- Fix Version checking and Version Error Message on install (Thx Paleo)
	- Moved Statistics to main menu, split out newest/popular/stats
	- Fixed bug where saved Thumbnails were almost never used
	- Fixed Localplay HTTPQ and MPD controls to reconize Live Stream
		urls. 
	- Added Localplay controls to API 
	- Added Added/Updated filters to API include the ability to specify
		a date range using ISO 8601 format with [START]/[END]
	- Changed API Date format to ISO 8601 