@@ -4,6 +4,7 @@
 
 --------------------------------------------------------------------------
   v.3.5-Alpha3 
+	- Added get lyrics and album art using http proxy server #313 + username, password patch
 	- Added lyricswiki link Ticket #70
 	- Updated README language
 	- Updated getid3 library 2.0.0b4 to 2.0.0b5
